2008-02-27 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: corrected installation directory for
	  current user installation mode
	* doc/README.txt: added Philipp Klaus Krause to the developers list

2008-02-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genUnpackBits): don't generate ifxJump, instead return
	  ifx condition
	  (genNearPointerGet, genPagedPointerGet, genFarPointerGet,
	  genCodePointerGet, genGenPointerGet): cleanup aop before generating
	    ifxJump to fix bug 1838000
	* src/SDCCsymt.c (aggregateToPointer): fix problem for xstack
	* support/regression/tests/bug1838000.c: new, added
	* device/include/mcs51/cc1110.h: new, added, thanks to Pravin Angolkar

2008-02-26 Borut Razem <borut.razem AT siol.net>

	* src/SDCCast.c, doc/adccman.lyx: fixed RFE #1901171: inerger promotion
	  of casted varargs
	* support/scripts/sdcc.nsi: added MULTIUSER page,
	  NSIS upgraded to version 2.35

2008-02-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (isSpiltOnStack): fixed bug 1565152
	* support/regression/tests/bug1565152.c: new, added

2008-02-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genPagedPointerSet): fixed bug 1670148
	* support/regression/ports/mcs51-xstack-auto/spec.mk: added expf.c
	* support/regression/tests/bug1670148.c: new, added

2008-02-25 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/at89c51ed2.h: fixed bug 1901469.

2008-02-24 Borut Razem <borut.razem AT siol.net>

	* src/SDCCast.c, src/SDCCast.h: fixed bug #1874922: explicit typecast
	  is ineffective for unsigned char parameter

2008-02-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (expandInlineFuncs): fixed bug 1875869
	* src/SDCCglue.c (printIvalBitFields): fixed bug 1806631
	* support/regression/tests/bitopcse.c: removed hc08 exception, see testfwk.h
	* support/Util/MySystem.c (my_system): output errorcode when verbose
